# No-IP

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  deny.toml  noip-duc-gui.desktop  noip-duc.service  noip-duc.spec
.github/workflows/: ci.yml
data/: com.noip.DUC.desktop  com.noip.DUC.metainfo.xml
src/: dns_method.rs  lib.rs  public_ip.rs  update.rs
