[package]
name = "noip-duc"
version = "3.3.0"
authors = ["No-IP Team <support@noip.com>"]
description = "No-IP Dynamic Update Client (https://www.noip.com)"
license = "Apache-2.0"
homepage = "https://www.noip.com"
edition = "2021"
rust-version = "1.76"

[[bin]]
name = "noip-duc"
path = "src/bin/main.rs"

[[bin]]
name = "noip-duc-gui"
path = "src/bin/gui/main.rs"
required-features = ["gui"]

[[bin]]
# Legacy single-file GUI implementation. The modular GUI under src/bin/gui/
# is the live code path; this binary is kept compiling only behind the same
# feature so old packagers don't break.
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[lib]
name = "noip_duc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
base64 = "^0.22"
byteorder = "^1.4"
# `IpMethods` is parsed from a String after clap is done, so clap doesn't
# require it to impl `Clone + Send + Sync`. See `Config::ip_method` in
# src/bin/main.rs.
clap = { version = "^4.5", features = ["cargo", "derive", "env"] }
env_logger = "^0.11"
form_urlencoded = "^1"
humantime = "^2"
log = "^0.4"
minreq = { version = "^2.6", features = ["https-rustls"] }
percent-encoding = "^2"
thiserror = "1.0"
hickory-resolver = "^0.24"
url = "^2.2"
eframe = { version = "0.28", optional = true }
egui_extras = { version = "0.28", optional = true, features = ["image"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
libc = { version = "0.2", optional = true }
zeroize = { version = "^1.8", features = ["zeroize_derive"] }
keyring = { version = "^3", optional = true, features = ["sync-secret-service", "crypto-rust"] }

[features]
gui = ["eframe", "egui_extras", "image", "libc", "keyring"]

[target.'cfg(unix)'.dependencies]
daemonize = "^0.5"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 'z'
panic = 'abort'

[package.metadata.deb]
section = "net"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
depends = ""
revision = ""
